--- a/tests/test_cases/2022/commands/701.709.221627.yaml
+++ b/tests/test_cases/2022/commands/701.709.221627.yaml
@@ -17,3 +17,15 @@ test_cases:
 - response: '709056216278340'
   expected_values:
     LEXUS_TF1_PAN: 196.25
+- response: 709056216278FC0
+  expected_values:
+    LEXUS_TF1_PAN: 218.75
+- response: '709056216279060'
+  expected_values:
+    LEXUS_TF1_PAN: 219.875
+- response: '709056216279100'
+  expected_values:
+    LEXUS_TF1_PAN: 221
+- response: 7090562162791A0
+  expected_values:
+    LEXUS_TF1_PAN: 222.125
