--- a/tests/test_cases/2022/commands/7B0.221006.yaml
+++ b/tests/test_cases/2022/commands/7B0.221006.yaml
@@ -2,6 +2,15 @@ command_id: 7B0.221006
 can_id_format: ELEVEN_BIT
 extended_addressing_enabled: false
 test_cases:
+- response: 7B8056210066C00
+  expected_values:
+    LEXUS_MASTER_CYL_TEMP: 28
+- response: 7B8056210066D00
+  expected_values:
+    LEXUS_MASTER_CYL_TEMP: 29
+- response: 7B8056210066E00
+  expected_values:
+    LEXUS_MASTER_CYL_TEMP: 30
 - response: 7B8056210067200
   expected_values:
     LEXUS_MASTER_CYL_TEMP: 34
