--- a/tests/test_cases/2022/commands/701.709.220103.yaml
+++ b/tests/test_cases/2022/commands/701.709.220103.yaml
@@ -5,9 +5,9 @@ test_cases:
 - response: 70907620103020062A2
   expected_values:
     LEXUS_ODO: 25250
-- response: 70907620103020062AA
-  expected_values:
-    LEXUS_ODO: 25258
 - response: '7090762010302006425'
   expected_values:
     LEXUS_ODO: 25637
+- response: '70907620103020064E1'
+  expected_values:
+    LEXUS_ODO: 25825
