--- a/tests/test_cases/2022/command_support.yaml
+++ b/tests/test_cases/2022/command_support.yaml
@@ -1,6 +1,21 @@
 model_year: 2022
 supported_commands_by_ecu:
-  7E0:
+  "700":
+  - 700.221059:LEXUS_ACCEL_PEDAL
+  - 700.221F2F:LEXUS_FLI
+  "701":
+  - 701.220103:LEXUS_ODO
+  - 701.221627:LEXUS_TF1_PAN,LEXUS_TFP_T
+  "7B0":
+  - 7B0.221006:LEXUS_MASTER_CYL_TEMP
+  "7C0":
+  - 7C0.2129:LEXUS_FLI_VOL
+  "7D0":
+  - 7D0.2162:LEXUS_PARKING_BRAKE
+  "7DF":
+  - 7DF.0131
+  - 7DF.0142
+  "7E0":
   - 0101:ACRF_RDY,ACRF_SUP,AIR_RDY,AIR_SUP,CAT_RDY,CAT_SUP,CCM_RDY,CCM_SUP,CIM_SUP,DTC_CNT,EGR_RDY,EGR_SUP,EVAP_RDY,EVAP_SUP,FUEL_RDY,FUEL_SUP,HCAT_RDY,HCAT_SUP,HTR_RDY,HTR_SUP,MIL,MIS_RDY,MIS_SUP,O2S_RDY,O2S_SUP
   - 0103:FUELSYS1,FUELSYS2
   - 0104:LOAD_PCT
@@ -20,7 +35,7 @@ supported_commands_by_ecu:
   - 011C:OBDSUP
   - 011F:RUNTM
   - 0121:MIL_DIST
-  - 0124:LAMBDA11_WIDE,O2S11_WIDE
+  - 0124:LAMBDA11_VOLT,O2S11_VOLT
   - 012E:EVAP_PCT
   - 012F:FLI
   - 0130:WARM_UPS
@@ -56,7 +71,7 @@ supported_commands_by_ecu:
   - 019D:FUEL_RATE_ALT,VFUEL_RATE
   - 019E:EXH_RATE
   - 01A6:ODO
-  7E1:
+  "7E1":
   - 0101:ACRF_RDY,ACRF_SUP,AIR_RDY,AIR_SUP,CAT_RDY,CAT_SUP,CCM_RDY,CCM_SUP,CIM_SUP,DTC_CNT,EGR_RDY,EGR_SUP,EVAP_RDY,EVAP_SUP,FUEL_RDY,FUEL_SUP,HCAT_RDY,HCAT_SUP,HTR_RDY,HTR_SUP,MIL,MIS_RDY,MIS_SUP,O2S_RDY,O2S_SUP
   - 0104:LOAD_PCT
   - 0105:ECT
@@ -76,65 +91,65 @@ supported_commands_by_ecu:
   - 014E:CLR_TIME
   - 0165:GEAR_RCMD,GEAR_SUP,GPL_STAT,GPL_SUP,N/D_STAT,N/D_SUP,N/G_STAT,N/G_SUP,PTO_STAT_AUX,PTO_SUP
 unsupported_commands_by_ecu:
-  6F1:
-  - 6F1.60D.22D240
-  - 6F1.612.224AB1
-  - 6F1.612.22586F
-  - 6F1.618.22DA12
-  - 6F1.618.22DA1F
-  - 6F1.618.22DA22
-  - 6F1.618.22DA23
-  - 6F1.618.22DA25
-  - 6F1.618.22DA28
-  - 6F1.618.22DA2A
-  - 6F1.618.22DA2E
-  - 6F1.618.22DA37
-  - 6F1.619.22DB32
-  - 6F1.619.22DFE7
-  - 6F1.629.22DBE4
-  - 6F1.640.221700
-  - 6F1.660.22D107
-  - 6F1.660.22D10D
-  700:
-  - '700.221074'
-  - '700.221638'
-  701:
-  - 701.709.221628
-  745:
-  - 745.74D.221739
-  747:
-  - 747.74F.220103
-  - 747.74F.22182E
-  750:
-  - '750.2115'
-  - '750.2116'
-  - 750.758.2130
-  - 750.758.221004
-  - 750.758.221005
-  - 750.758.222021
-  7B0:
-  - 7B0.7B8.2103
-  - 7B0.7B8.2121
-  - 7B0.7B8.2147
-  7B1:
-  - 7B1.221026
-  7B3:
-  - 7B3.221004
-  7C0:
-  - 7C0.221021
-  - 7C0.221022
-  7D2:
-  - 7D2.221F5B
-  - 7D2.7DA.22106C
-  - 7D2.7DA.221F0D
-  7E0:
+  "6F1":
+  - 6F1.221700|e=40,fc=1:LEXUS_ODO_2
+  - 6F1.224AB1|e=12,fc=1:LEXUS_VSS2
+  - 6F1.22586F|e=12,fc=1:LEXUS_EOP_V2
+  - 6F1.22D107|e=60,fc=1:LEXUS_VSS_V2
+  - 6F1.22D10D|e=60,fc=1:LEXUS_ODO1,LEXUS_ODO2
+  - 6F1.22D240|e=0D,fc=1:LEXUS_VSS_INSTR
+  - 6F1.22DA12|e=18,fc=1:LEXUS_ATF_TEMP_V2
+  - 6F1.22DA1F|e=18,fc=1:LEXUS_KICKDOWN
+  - 6F1.22DA22|e=18,fc=1:LEXUS_TQ_CNVRT_LOCKUP
+  - 6F1.22DA23|e=18,fc=1:LEXUS_ODO_V3
+  - 6F1.22DA25|e=18,fc=1:LEXUS_EOT_V3
+  - 6F1.22DA28|e=18,fc=1:LEXUS_BRAKE_SWITCH
+  - 6F1.22DA2A|e=18,fc=1:LEXUS_TQ_CNVRT_RPM,LEXUS_TRANS_SHAFT_RPM
+  - 6F1.22DA2E|e=18,fc=1:LEXUS_GEAR_V2
+  - 6F1.22DA37|e=18,fc=1:LEXUS_TIME_D,LEXUS_TIME_M,LEXUS_TIME_S
+  - 6F1.22DB32|e=19,fc=1:LEXUS_AXLE_FRONT_ACTUAL_TORQUE,LEXUS_AXLE_FRONT_SETPOINT_TORQUE
+  - 6F1.22DBE4|e=29,fc=1:LEXUS_FL_SPD,LEXUS_FR_SPD,LEXUS_RL_SPD,LEXUS_RR_SPD
+  - 6F1.22DFE7|e=19,fc=1:LEXUS_OIL_CHANGE_DIST,LEXUS_VGT_CAL_ANGLE
+  "700":
+  - 700.221074:LEXUS_ENG_OIL_PRESS,LEXUS_EOP
+  - 700.221638:LEXUS_ATF_TEMP
+  "701":
+  - 701.221628:LEXUS_TF2_CONV
+  "745":
+  - 745.221739|fc=1:LEXUS_HVBAT_SOC_DISPLAY
+  "747":
+  - 747.220103|fc=1:LEXUS_ODO_V6
+  - 747.22182E|fc=1:LEXUS_HVBAT_C01_V,LEXUS_HVBAT_C02_V,LEXUS_HVBAT_C03_V,LEXUS_HVBAT_C04_V,LEXUS_HVBAT_C05_V,LEXUS_HVBAT_C06_V,LEXUS_HVBAT_C07_V,LEXUS_HVBAT_C08_V,LEXUS_HVBAT_C09_V,LEXUS_HVBAT_C10_V,LEXUS_HVBAT_C11_V,LEXUS_HVBAT_C12_V,LEXUS_HVBAT_C13_V,LEXUS_HVBAT_C14_V,LEXUS_HVBAT_C15_V,LEXUS_HVBAT_C16_V,LEXUS_HVBAT_C17_V,LEXUS_HVBAT_C18_V,LEXUS_HVBAT_C19_V,LEXUS_HVBAT_C20_V,LEXUS_HVBAT_C21_V,LEXUS_HVBAT_C22_V,LEXUS_HVBAT_C23_V,LEXUS_HVBAT_C24_V,LEXUS_HVBAT_C25_V,LEXUS_HVBAT_C26_V,LEXUS_HVBAT_C27_V,LEXUS_HVBAT_C28_V,LEXUS_HVBAT_C29_V,LEXUS_HVBAT_C30_V,LEXUS_HVBAT_C31_V,LEXUS_HVBAT_C32_V,LEXUS_HVBAT_C33_V,LEXUS_HVBAT_C34_V,LEXUS_HVBAT_C35_V,LEXUS_HVBAT_C36_V,LEXUS_HVBAT_C37_V,LEXUS_HVBAT_C38_V,LEXUS_HVBAT_C39_V,LEXUS_HVBAT_C40_V,LEXUS_HVBAT_C41_V,LEXUS_HVBAT_C42_V,LEXUS_HVBAT_C43_V,LEXUS_HVBAT_C44_V,LEXUS_HVBAT_C45_V,LEXUS_HVBAT_C46_V,LEXUS_HVBAT_C47_V,LEXUS_HVBAT_C48_V,LEXUS_HVBAT_C49_V,LEXUS_HVBAT_C50_V,LEXUS_HVBAT_C51_V,LEXUS_HVBAT_C52_V,LEXUS_HVBAT_C53_V,LEXUS_HVBAT_C54_V,LEXUS_HVBAT_C55_V,LEXUS_HVBAT_C56_V,LEXUS_HVBAT_C57_V,LEXUS_HVBAT_C58_V,LEXUS_HVBAT_C59_V,LEXUS_HVBAT_C60_V,LEXUS_HVBAT_C61_V,LEXUS_HVBAT_C62_V,LEXUS_HVBAT_C63_V,LEXUS_HVBAT_C64_V,LEXUS_HVBAT_C65_V,LEXUS_HVBAT_C66_V,LEXUS_HVBAT_C67_V,LEXUS_HVBAT_C68_V,LEXUS_HVBAT_C69_V,LEXUS_HVBAT_C70_V,LEXUS_HVBAT_C71_V,LEXUS_HVBAT_C72_V,LEXUS_HVBAT_C73_V,LEXUS_HVBAT_C74_V,LEXUS_HVBAT_C75_V,LEXUS_HVBAT_C76_V,LEXUS_HVBAT_C77_V,LEXUS_HVBAT_C78_V,LEXUS_HVBAT_C79_V,LEXUS_HVBAT_C80_V,LEXUS_HVBAT_C81_V,LEXUS_HVBAT_C82_V,LEXUS_HVBAT_C83_V,LEXUS_HVBAT_C84_V,LEXUS_HVBAT_C85_V,LEXUS_HVBAT_C86_V,LEXUS_HVBAT_C87_V,LEXUS_HVBAT_C88_V,LEXUS_HVBAT_C89_V,LEXUS_HVBAT_C90_V,LEXUS_HVBAT_C91_V,LEXUS_HVBAT_C92_V,LEXUS_HVBAT_C93_V,LEXUS_HVBAT_C94_V,LEXUS_HVBAT_C95_V,LEXUS_HVBAT_C96_V,LEXUS_HVBAT_CMU01_VOLT,LEXUS_HVBAT_CMU02_VOLT
+  "750":
+  - 750.2115|e=2A,fc=1:LEXUS_TP_2_FL,LEXUS_TP_2_FR,LEXUS_TP_2_RL,LEXUS_TP_2_RR,LEXUS_TP_2_SPARE
+  - 750.2116|e=2A,fc=1:LEXUS_TT_FL,LEXUS_TT_FR,LEXUS_TT_RL,LEXUS_TT_RR,LEXUS_TT_SPARE
+  - 750.2130|e=2A,ta=2A,fc=1:LEXUS_TP_FL,LEXUS_TP_FL_V1,LEXUS_TP_FR,LEXUS_TP_FR_V1,LEXUS_TP_RL,LEXUS_TP_RL_V1,LEXUS_TP_RR,LEXUS_TP_RR_V1,LEXUS_TP_SPARE,LEXUS_TP_SPARE_V1
+  - 750.221004|e=2A,ta=2A,fc=1:LEXUS_TT_1,LEXUS_TT_2,LEXUS_TT_3,LEXUS_TT_4,LEXUS_TT_5,LEXUS_TT_FL_V2,LEXUS_TT_FL_V3,LEXUS_TT_FR_V2,LEXUS_TT_FR_V2,LEXUS_TT_RL_V2,LEXUS_TT_RL_V2,LEXUS_TT_RR_V2,LEXUS_TT_RR_V2,LEXUS_TT_SPARE_V2,LEXUS_TT_SPARE_V3
+  - 750.221005|e=2A,ta=2A,fc=1:LEXUS_TP_1,LEXUS_TP_2,LEXUS_TP_3,LEXUS_TP_4,LEXUS_TP_5,LEXUS_TP_FL_V2,LEXUS_TP_FL_V2,LEXUS_TP_FR_V2,LEXUS_TP_FR_V2,LEXUS_TP_RL_V2,LEXUS_TP_RL_V2,LEXUS_TP_RR_V2,LEXUS_TP_RR_V2,LEXUS_TP_SPARE_V2
+  - 750.222021|e=2A,ta=2A,fc=1:LEXUS_TID_1,LEXUS_TID_2,LEXUS_TID_3,LEXUS_TID_4
+  "7B0":
+  - 7B0.2103:LEXUS_TIRE_FL_SPD,LEXUS_TIRE_FR_SPD,LEXUS_TIRE_RL_SPD,LEXUS_TIRE_RR_SPD
+  - 7B0.2121:LEXUS_VSS
+  - 7B0.2147:LEXUS_LAT_G,LEXUS_LNG_G,LEXUS_STEER_ANGLE,LEXUS_YAW_RATE
+  "7B1":
+  - 7B1.221026:LEXUS_COUPLING_TEMP
+  "7B3":
+  - 7B3.221004:LEXUS_STEERING_ANGLE
+  "7C0":
+  - 7C0.221021:LEXUS_BATTERY_VOLTAGE
+  - 7C0.221022|fc=1:LEXUS_FLV
+  "7D2":
+  - 7D2.22106C|fc=1:LEXUS_HVBAT_SOC_MAX,LEXUS_HVBAT_SOC_MIN
+  - 7D2.221F0D|fc=1:LEXUS_VSS_V3
+  - 7D2.221F5B|fc=1:LEXUS_SOC
+  "7E0":
   - 7E0.0131:CLR_DIST
   - 7E0.0142:VPWR
-  - 7E0.7E8.2121
-  - 7E0.7E8.2128
-  - 7E0.7E8.2151
-  - 7E0.7E8.2182
-  - 7E0.7E8.2185
-  7E1:
+  - 7E0.2121:LEXUS_CC_S
+  - 7E0.2128:LEXUS_ODO_V2,LEXUS_ODO_V3_V2
+  - 7E0.2151:LEXUS_EOT,LEXUS_PREV_TRIP_DST,LEXUS_VVTOT
+  - 7E0.2182:LEXUS_ATF_PAN_T,LEXUS_ATF_TQC_T
+  - 7E0.2185:LEXUS_GEAR,LEXUS_TQC_LOCKUP
+  "7E1":
   - 7E1.7E9.0131
   - 7E1.7E9.0142
