Update command data for Lexus/IS 350

--- a/tests/test_cases/2022/command_support.yaml
+++ b/tests/test_cases/2022/command_support.yaml
@@ -139,9 +139,9 @@ unsupported_commands_by_ecu:
   - 7C0.221021:LEXUS_BATTERY_VOLTAGE
   - 7C0.221022|fc=1:LEXUS_FLV
   "7D2":
-  - 7D2.22106C|fc=1:LEXUS_HVBAT_SOC_MAX,LEXUS_HVBAT_SOC_MIN
   - 7D2.221F0D|fc=1:LEXUS_VSS_V3
   - 7D2.221F5B|fc=1:LEXUS_SOC
+  - 7D2.7DA.22106C|fc=1:LEXUS_HVBAT_SOC_MAX,LEXUS_HVBAT_SOC_MIN
   "7E0":
   - 7E0.0131:CLR_DIST
   - 7E0.0142:VPWR
