--- a/tests/test_cases/2014/commands/7E0.2121.yaml
+++ b/tests/test_cases/2014/commands/7E0.2121.yaml
@@ -5,3 +5,6 @@ test_cases:
   response: |-
     2121
     7E80761210000800000
+- expected_values:
+    LEXUS_CC_S: 0
+  response: '7E80761210000800000'
